# nanopb-test

./: .gitmodules  CMakeLists.txt
proto/: test.options  test.proto
